--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,3 +1,14 @@
 body {
   background-color: #7d72b9;
 }
+.joke {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.joke--text {
+  font-size: 30px;
+  padding: 30px;
+  text-align: center;
+}
