Add footer and improve layout

--- a/site/stylesheets/main.css
+++ b/site/stylesheets/main.css
@@ -1,15 +1,37 @@
 body {
   background-color: #7d72b9;
   margin: 0;
+  font-size: 30px;
 }
+
+.layout {
+  display: grid;
+  grid-template-rows: [header] minmax(0, auto) [content] auto [footer] minmax(0, auto);
+  align-content: space-between;
+  min-height: 100vh;
+}
+.layout--content {
+  grid-row: content;
+}
+.layout--footer {
+  grid-row: footer;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .joke {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 .joke--text {
-  font-size: 30px;
   padding: 30px;
   text-align: center;
 }
+
+.footer--hint {
+  font-size: 18px;
+}
+
+
