--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -1,4 +1,3 @@
-
 :root {
   --bg-color: #333366;
   --text-color: #CC9966;
@@ -37,6 +36,7 @@ a:hover, a:focus {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  flex-direction: row-reverse;
   align-items: baseline;
   padding: 10px;
 }
