--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -1,4 +1,6 @@
 :root {
+  --large-font-size: 36px;
+  --small-font-size: calc(var(--large-font-size) / 2);
   --bg-color: #333366;
   --text-color: #CC9966;
   --text-highlight-color: FFCC99;
@@ -10,7 +12,7 @@
 body {
   background-color: var(--bg-color);
   margin: 0;
-  font-size: 36px;
+  font-size: var(--large-font-size);
   color: var(--text-color);
   font-family: 'Barriecito';
 }
@@ -53,7 +55,7 @@ a:hover, a:focus {
 }
 
 .footer--hint {
-  font-size: 18px;
+  font-size: var(--small-font-size);
 }
 
 
